--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,8 +40,8 @@
             {% endif %}
 
             {% if not app.user %}
-            <a class="btn btn-success navbar-righ" type="button" href="{{ path('app_connexion') }}">
-                Se Connecter
+            <a class="btn btn-success navbar-right" type="button" href="{{ path('app_connexion') }}">
+                Connexion
             </a>
             {% endif %}
 
