--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -44,7 +44,7 @@
                                 </h3>
 {#                                TODO PRIX MINIMAL#}
 {#                                {% if type.vehicules|length > 0 %}#}
-{#                                    <p class="small font-bold float-right">À partir de {{ type.vehicules.0.prix }} €/j</p>#}
+{#                                    <p class="small font-bold float-right">À partir de {{ type.vehicules.0.prix }} €/jour</p>#}
 {#                                {% else %}#}
 {#                                    <p class="small font-bold float-right text-danger">En rupture de stock</p>#}
 {#                                {% endif %}#}
