--- a/templates/loueur/reservations.html.twig
+++ b/templates/loueur/reservations.html.twig
@@ -31,6 +31,11 @@
             <span class="ml-2">Statistiques</span>
         </a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ path('app_deconnexion') }}">
+            <span class="ml-2">Déconnexion</span>
+        </a>
+    </li>
 {% endblock %}
 
 {% block dashboard_current %}
