Suppression de réservations

--- a/templates/loueur/statistiques.html.twig
+++ b/templates/loueur/statistiques.html.twig
@@ -36,7 +36,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{{ path('loueur_panel') }}">Panel</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Statistique</li>
+            <li class="breadcrumb-item active" aria-current="page">Statistiques</li>
         </ol>
     </nav>
 {% endblock %}
