--- a/templates/loueur/clients.html.twig
+++ b/templates/loueur/clients.html.twig
@@ -32,6 +32,11 @@
             <span class="ml-2">Statistiques</span>
         </a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ path('app_deconnexion') }}">
+            <span class="ml-2">Déconnexion</span>
+        </a>
+    </li>
 {% endblock %}
 {% block dashboard_current %}
     <nav aria-label="breadcrumb">
