--- a/templates/loueur/vehicules_formulaire.html.twig
+++ b/templates/loueur/vehicules_formulaire.html.twig
@@ -86,7 +86,7 @@
                         <div class="col">
                             <div class="text-center">
                                 {{ form_row(form.save) }}
-                                {{ form_row(form.etat) }}
+                                {{ form_row(form.disponible) }}
                             </div>
                         </div>
                     </div>
