page de détails pour une location

--- a/templates/loueur/index.html.twig
+++ b/templates/loueur/index.html.twig
@@ -105,6 +105,7 @@
                             </tr>
                             </thead>
                             <tbody>
+
                             <tr>
                                 <th scope="row">17371705</th>
                                 <td>Porsche Cayenne</td>
@@ -156,7 +157,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <a href="loueur_dashboard_reservations.html" class="btn btn-block btn-light">Tout voir</a>
+                    <a href="{{ path('loueur_locations') }}" class="btn btn-block btn-light">Tout voir</a>
                 </div>
             </div>
         </div>
