--- a/templates/loueur/locations.html.twig
+++ b/templates/loueur/locations.html.twig
@@ -60,7 +60,7 @@
                                 <th scope="col">Dates</th>
                                 <th scope="col">Prix</th>
                                 <th scope="col">Paiement</th>
-                                <th scope="col">Status</th>
+                                <th scope="col">Statut</th>
                                 <th scope="col"></th>
                             </tr>
                             </thead>
@@ -78,7 +78,7 @@
                                     <td>
                                         {{ l.location.prix }} €
                                         {% if l.location.estReccurent %}
-                                            /Mois
+                                            /mois
                                         {% endif %}
                                     </td>
                                     <td>
@@ -92,7 +92,12 @@
                                         {% if l.enCours%}
                                             <span class="badge badge-primary">En cours</span>
                                         {% else %}
-                                            <span class="badge badge-secondary">Finis</span>
+                                            <span class="badge badge-secondary">Terminée</span>
+                                        {% endif %}
+                                    </td>
+                                    <td>
+                                        {% if l.enCours%}
+                                            <span><a href="{{ path('location_location_recap', { 'id': l.location.id }) }}" class="btn btn-sm btn-primary">Voir</a><span>
                                         {% endif %}
                                     </td>
                                 </tr>
