--- a/templates/user/locations.html.twig
+++ b/templates/user/locations.html.twig
@@ -61,7 +61,7 @@
                                     {% endif %}
                                     </td>
 {#                                    TODO page détail location#}
-                                    <td><a href="#">Détails</a></td>
+                                    <td><a href="{{ path('location_location_recap', { 'id': location.id }) }}) }}">Détails</a></td>
                                 </tr>
                             {% endfor %}
                             </tbody>
