--- a/templates/user/location_recap.html.twig
+++ b/templates/user/location_recap.html.twig
@@ -2,6 +2,24 @@
 
 {% block sidebard %}
     <li class="nav-item">
+        <a class="nav-link" href="{{ path("user_panel") }}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+            <span class="ml-2">Accueil</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="{{ path('user_panel_locations') }}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
+            <span class="ml-2">Mes Locations</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ path('app_deconnexion') }}">
+            <span class="ml-2">Déconnexion</span>
+        </a>
+    </li>
+    <br />
+    <li class="nav-item">
         <a class="nav-link" href="{{ path("loueur_panel") }}">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
             <span class="ml-2">Accueil</span>
@@ -38,21 +56,47 @@
     </li>
 {% endblock %}
 
-{% block dashboard_current %}
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{{ path('loueur_panel') }}">Panel</a></li>
-            <li class="breadcrumb-item"><a href="{{ path('loueur_locations') }}">Locations</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Détails</li>
-        </ol>
-    </nav>
-{% endblock %}
 {% block dashboard_body %}
-    <h1>Merci pour votre location {{ location.user }}</h1>
-    <h1>Test{{ location.id }}</h1>
-    <h2>Prix : {{ location.prix }}</h2>
-    <h3>Durée restante : {{ location.dateFin }}-{{ location.dateDebut }}</h3>
-    {% if location.estReccurent %}
-        <h1>Yes</h1>
-    {% endif %}
+    {{ encore_entry_script_tags('details') }}
+    <div class="container">
+        <div class="container px-1 px-md-4 py-5 mx-auto">
+            <div class="card">
+                <div class="row d-flex justify-content-between px-3 top">
+                    <div class="d-flex">
+                        <h5>Réservation <span class="text-primary font-weight-bold">#{{ location.id }}</span></h5>
+                    </div>
+                    <div class="d-flex flex-column text-sm-right">
+                        <p class="mb-0">Loueur <span>{{ location.vehicule.loueur.name }}</span></p>
+                        <p>Contact <span class="font-weight-bold">{{ location.vehicule.loueur.email }}</span></p>
+                    </div>
+                </div> <!-- Add class 'active' to progress -->
+                <div class="row d-flex justify-content-center">
+                    <div class="col-12">
+                        <ul id="progressbar" class="text-center">
+                            <li class="active step0"></li>
+                            <li class="active step0"></li>
+                            <li class="step0"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row justify-content-between top">
+                    <div class="row d-flex icon-content"> <img class="icon" src="https://i.imgur.com/9nnc9Et.png">
+                        <div class="d-flex flex-column">
+                            <p class="font-weight-bold">Réservation <br>Enregistrée</p>
+                        </div>
+                    </div>
+                    <div class="row d-flex icon-content"> <img class="icon" src="https://i.imgur.com/u1AzR7w.png">
+                        <div class="d-flex flex-column">
+                            <p class="font-weight-bold">Réservation<br>Payée</p>
+                        </div>
+                    </div>
+                    <div class="row d-flex icon-content"> <img class="icon" src="https://i.imgur.com/TkPm63y.png">
+                        <div class="d-flex flex-column">
+                            <p class="font-weight-bold">Véhicule<br>Prêt</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
