--- a/templates/loueur/locations.html.twig
+++ b/templates/loueur/locations.html.twig
@@ -46,7 +46,7 @@
     </nav>
 {% endblock %}
 {% block dashboard_body %}
-    <h1 class="h2">Locations</h1>
+    <h1 class="h2">Locations en cours</h1>
     <div class="row">
         <div class="col">
             <div class="card rounded shadow-sm border-0">
@@ -58,7 +58,7 @@
                                 <th scope="col">#</th>
                                 <th scope="col">Modèle</th> <!-- Idées : https://bootsnipp.com/snippets/Veob -->
                                 <th scope="col">Dates</th>
-                                <th scope="col">Prix</th>
+                                <th scope="col">Montant</th>
                                 <th scope="col">Paiement</th>
                                 <th scope="col">Statut</th>
                                 <th scope="col"></th>
