base page facturation

--- a/templates/loueur/vehicules.html.twig
+++ b/templates/loueur/vehicules.html.twig
@@ -86,7 +86,7 @@
                                         {% endif %}
                                     {% endif %}
                                     </td>
-                                    <td><a href="{{ path('loueur_vehicules_modifier', { 'id': v.vehicule.id }) }}">Détails</a></td>
+                                    <td><a href="{{ path('loueur_vehicules_modifier', { 'id': v.vehicule.id }) }}" class="btn btn-sm btn-primary">Modifier</a></td>
                                 </tr>
                             {% endfor %}
                             </tbody>
