panel loueur affichage clients

--- a/templates/loueur/index.html.twig
+++ b/templates/loueur/index.html.twig
@@ -79,7 +79,7 @@
             <div class="card rounded shadow-sm border-0">
                 <div class="card-body p-4 text-center">
                     <p class="card-title">Clients</p>
-                    <h2 class="card-text">_TODO</h2>
+                    <h2 class="card-text">{{ nbClients }}</h2>
                 </div>
             </div>
         </div>
