--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -31,8 +31,8 @@
         <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0">
             <div class="card rounded shadow-sm border-0">
                 <div class="card-body p-4 text-center">
-                    <p class="card-title">Réservations</p>
-                    <h2 class="card-text">_TODO</h2>
+                    <p class="card-title">Locations</p>
+                    <h2 class="card-text">{{ nbLocations }}</h2>
                 </div>
             </div>
         </div>
@@ -40,8 +40,8 @@
         <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0">
             <div class="card rounded shadow-sm border-0">
                 <div class="card-body p-4 text-center">
-                    <p class="card-title">Véhicules loués</p>
-                    <h2 class="card-text">_TODO</h2>
+                    <p class="card-title">Total des véhicules</p>
+                    <h2 class="card-text">{{ nbVehicules }}</h2>
                 </div>
             </div>
         </div>
@@ -49,8 +49,8 @@
         <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0">
             <div class="card rounded shadow-sm border-0">
                 <div class="card-body p-4 text-center">
-                    <p class="card-title">Revenue Totaux</p>
-                    <h2 class="card-text">_TODO</h2>
+                    <p class="card-title">Revenue totaux</p>
+                    <h2 class="card-text">{{ totalRevenus }} €</h2>
                 </div>
             </div>
         </div>
