--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -18,6 +18,7 @@
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{{ path('app_deconnexion') }}">
+            <i class="fas fa-sign-out-alt"></i>
             <span class="ml-2">Déconnexion</span>
         </a>
     </li>
