--- a/templates/loueur/index.html.twig
+++ b/templates/loueur/index.html.twig
@@ -52,7 +52,7 @@
         <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0">
             <div class="card rounded shadow-sm border-0">
                 <div class="card-body p-4 text-center">
-                    <p class="card-title">Revenue</p>
+                    <p class="card-title">Revenus</p>
                     <h2 class="card-text">_TODO</h2>
                 </div>
             </div>
