--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -24,9 +24,9 @@
             <div class="row justify-content-md-center">
                 <div class="col-6">
                     {% if estRecurrent %}
-                        {{ form_row(form.date, {'label': 'Choississez la date de début de location:'}) }}
+                        {{ form_row(form.date, {'label': 'Choisissez la date de début de location :'}) }}
                     {% else %}
-                        {{ form_row(form.date, {'label': 'Choississez vos dates de location:'}) }}
+                        {{ form_row(form.date, {'label': 'Choisissez vos dates de location :'}) }}
                     {% endif %}
                 </div>
             </div>
