--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -2,6 +2,20 @@
 
 {% block title %}Panel Admin - Utilisateurs{% endblock %}
 
+{% block sidebard %}
+    <li class="nav-item">
+        <a class="nav-link" href="{{ path("admin_panel") }}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+            <span class="ml-2">Accueil</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="{{ path('admin_panel_utilisateur') }}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+            <span class="ml-2">Utilisateurs</span>
+        </a>
+    </li>
+{% endblock %}
 
 {% block dashboard_current %}
     <nav aria-label="breadcrumb">
